\name{NEWS}
\title{NEWS file for the survival package}
\section{Changes in version 3.5-4}{
  \itemize{
    \item Update the help file for the finegray command.  It was
    incorrect with respect to time-dependent covariates.
    \item Add model= as an option to survfit, and add a
    model.frame.survfit method.  These are needed to call the
    survfit/pseudo pair inside another function.
    \item Small bug in survfit: if start.time was present, the 'type' element
    could be missing from the output object.
    \item Enhance the concordance command: one can now put multiple
    predictions on the right hand side of the equation; this will give
    the set of concordances and their variance-covariance matrix. 
   \item Add a couple of overlooked S3 methods to the NAMESPACE
}}
\section{Changes in version 3.5-3}{
  \itemize{
    \item Fix final compiler warnings that affect CRAN
    \item Restore backwards compatability for ratetable() calls in a
    formula. The feature is used by the relsurv package.
    \item Add information on trust regions to the fail directory.
}}
\section{Changes in version 3.5-2}{
  \itemize{
    \item New release for CRAN; chase down some challenging (for me)
    C-code memory issues
    \item Clean up test case for drop.special
}}
\section{Changes in version 3.5-1}{
  \itemize{
    \item Minor edits to survreg (fit$coef to fit$coefficients) and
    summary.coxph (a model with only an offset)
    \item Fix error in fastkm.c (new routine, edge case, no one had
    found it yet.)
    \item Fix a few niggles in .c code, found by the new compiler chain
    \item Remove backwards compatability for ratetable() calls in a
    formula;  this was changed in the main code many years ago.
}}
\section{Changes in version 3.5-0}{
  \itemize{
    \item Final check and updates for CRAN submission
}}
\section{Changes in version 3.4-2}{
  \itemize{
    \item For a multi-state coxph model, the default is now