@@ -903,6 +903,30 @@ n= 227, number of events= 164
 > 
 > 
 > cleanEx()
+> nameEx("hoel")
+> ### * hoel
+> 
+> flush(stderr()); flush(stdout())
+> 
+> ### Name: hoel
+> ### Title: Mouse cancer data
+> ### Aliases: hoel
+> ### Keywords: datasets
+> 
+> ### ** Examples
+> 
+> hsurv <- survfit(Surv(days, outcome) ~ trt, data = hoel, id= id)
+> plot(hsurv, lty=1:2, col=rep(1:3, each=2), lwd=2, xscale=30.5,
++       xlab="Months", ylab= "Death")
+> legend("topleft", c("Lymphoma control", "Lymphoma germ free",
++                     "Sarcoma control", "Sarcoma germ free",
++                     "Other control", "Other germ free"),
++        col=rep(1:3, each=2), lty=1:2, lwd=2, bty='n')
+> hfit <- coxph(Surv(days, outcome) ~ trt, data= hoel, id = id)
+> 
+> 
+> 
+> cleanEx()
 > nameEx("is.ratetable")
 > ### * is.ratetable
 > 
@@ -3735,7 +3759,7 @@ $terms
 > cleanEx()
 > options(digits = 7L)
 > base::cat("Time elapsed: ", proc.time() - base::get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  3.085 0.112 3.199 0 0 
+Time elapsed:  3.15 0.152 3.304 0 0 
 > grDevices::dev.off()
 null device 
           1 
